# gtk-dup-file-manager

./: .gitignore  Makefile.am  README.md  configure.ac
src/: DMWindow.cpp  DMWindow.h  FileSearch.cpp  FileSearch.h  Makefile.am  main.cpp
